Fixes to hide the buy button on smaller iphone screens

--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -297,6 +297,8 @@
     border-top: 2px solid $light-gray
 
   .main-cta, .gift-cta
+    &.purchase-started, &.login-started
+      display: none
     pointer-events: none
     left: 0
     right: 0
